fix(tabs): align text to the center unless layout is icon start/end
fixes #15273

--- a/core/src/components/tabbar/tab-button.scss
+++ b/core/src/components/tabbar/tab-button.scss
@@ -23,6 +23,7 @@
 
   background: transparent;
 
+  text-align: var(--text-align, center);
   text-decoration: none;
 
   cursor: pointer;
